# Deep-Scout-Github

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: scan.yml
deep_scout/: cli.py  config.py  scanner.py
deep_scout/detectors/: entropy.py  regex.py
deep_scout/github/: client.py
deep_scout/reporting/: base.py  html.py  json_report.py  remediation.py  slack.py
deep_scout/ui/: progress.py
deep_scout/utils/: file_walker.py  git.py  whitelist.py
demo/: README.md
demo/config/: aws-keys.yml  slack.yml  stripe.yml
demo/keys/: ssh-private.key
hooks/: pre-commit
tests/: test_imports.py
